--- a/xml/rss/generacion_validacion_y_lectura_de_rss_con_python.ipynb
+++ b/xml/rss/generacion_validacion_y_lectura_de_rss_con_python.ipynb
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -120,7 +120,7 @@
         "id": "HRVDy3SYNrRZ",
         "outputId": "b5b0441f-acf7-4e99-9ac6-a9dc4016f1d6"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -166,7 +166,7 @@
         "id": "nE7SMKSJOeAZ",
         "outputId": "60850c2b-fbe1-49c7-f70c-d0ca42c71d7d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -213,7 +213,7 @@
       "metadata": {
         "id": "aiKsy-HDOZvf"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -230,14 +230,48 @@
       "source": [
         "La librería que vamos a utilizar para validar un feed no se encuentra en los repositorios de PyPi. Así que tendrás que descargarla del siguiente enlace:\n",
         "\n",
-        "https://drive.google.com/file/d/1prp6XMsWjotPYhPxXA5YqkQ5XEPYn48U/view?usp=sharing\n",
+        "https://github.com/IES-Rafael-Alberti/LMSGI-21-22-codes/raw/main/xml/rss/feedvalidator.zip\n",
         "\n",
         "Descomprime el archivo, crea una carpeta con el nombre `feedvalidator` en los archivos de este cuaderno y copia todos los archivos .py dentro.\n",
         "\n",
-        "Después de eso podrás importarla:"
+        "Tendremos que instalar la librería `html5lib`, que es requisito para `feedvalidator`:"
       ],
       "metadata": {
         "id": "Qs_o0UXRVT6J"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip install html5lib"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QZ-qhNcTNtfX",
+        "outputId": "652e634f-e7cb-47db-932b-0cc674747efb"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: html5lib in /usr/local/lib/python3.7/dist-packages (1.0.1)\n",
+            "Requirement already satisfied: six>=1.9 in /usr/local/lib/python3.7/dist-packages (from html5lib) (1.15.0)\n",
+            "Requirement already satisfied: webencodings in /usr/local/lib/python3.7/dist-packages (from html5lib) (0.5.1)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Después de eso podrás importarla:"
+      ],
+      "metadata": {
+        "id": "9uwjlzK_NrEJ"
       }
     },
     {
